working on docs

--- a/docs/latex/md__home_rex_projects_wol-api_README.tex
+++ b/docs/latex/md__home_rex_projects_wol-api_README.tex
@@ -1,4 +1,16 @@
-\hypertarget{md__home_rex_projects_wol-api_README_autotoc_md1}{}\doxysection{Watch-\/on-\/\+L\+B\+R\+Y A\+P\+I proxy thingy to save data to database}\label{md__home_rex_projects_wol-api_README_autotoc_md1}
-requirements\+: pipenv, flask (pipenv install flask), postgresql, libpq-\/dev, $\sim$$\ast$psycopg2-\/binary$\ast$$\sim$ $<$-\/ trunc.
+\hypertarget{md__home_rex_projects_wol-api_README_autotoc_md1}{}\doxysection{Watch-\/on-\/\+L\+B\+R\+Y A\+P\+I proxy that saves data from L\+B\+R\+Y to a database}\label{md__home_rex_projects_wol-api_README_autotoc_md1}
+\hypertarget{md__home_rex_projects_wol-api_README_autotoc_md2}{}\doxysubsection{Requirements\+:}\label{md__home_rex_projects_wol-api_README_autotoc_md2}
+pipenv flask (pipenv install flask) postgresql libpq-\/dev\hypertarget{md__home_rex_projects_wol-api_README_autotoc_md3}{}\doxysubsection{Installation instructions\+:}\label{md__home_rex_projects_wol-api_README_autotoc_md3}
+Clone the repository from Github\+: 
+\begin{DoxyCode}{0}
+\DoxyCodeLine{Change working directory to the recently cloned folder: }
+\DoxyCodeLine{```cd wol-\/ap}
+\end{DoxyCode}
 
-tempfix\+: {\ttfamily pipenv run pip install psycopg2} 
+
+Install dependencies\+: 
+\begin{DoxyCode}{0}
+\DoxyCodeLine{Run the API:}
+\DoxyCodeLine{```pipenv run python src/apimod/index.p}
+\end{DoxyCode}
+\hypertarget{md__home_rex_projects_wol-api_README_autotoc_md4}{}\doxysubsection{Usage\+:}\label{md__home_rex_projects_wol-api_README_autotoc_md4}
