working on docs

--- a/docs/latex/md__home_rex_projects_wol-api_README.tex
+++ b/docs/latex/md__home_rex_projects_wol-api_README.tex
@@ -1,16 +1,32 @@
 \hypertarget{md__home_rex_projects_wol-api_README_autotoc_md1}{}\doxysection{Watch-\/on-\/\+L\+B\+R\+Y A\+P\+I proxy that saves data from L\+B\+R\+Y to a database}\label{md__home_rex_projects_wol-api_README_autotoc_md1}
-\hypertarget{md__home_rex_projects_wol-api_README_autotoc_md2}{}\doxysubsection{Requirements\+:}\label{md__home_rex_projects_wol-api_README_autotoc_md2}
-pipenv flask (pipenv install flask) postgresql libpq-\/dev\hypertarget{md__home_rex_projects_wol-api_README_autotoc_md3}{}\doxysubsection{Installation instructions\+:}\label{md__home_rex_projects_wol-api_README_autotoc_md3}
-Clone the repository from Github\+: 
+{\bfseries{Requirements\+:}}
+\begin{DoxyItemize}
+\item pipenv
+\item flask (pipenv install flask)
+\item postgresql
+\item libpq-\/dev
+\end{DoxyItemize}
+
+{\bfseries{Installation instructions\+:}}
+
+Clone the repository from Github\+:
+
+
 \begin{DoxyCode}{0}
 \DoxyCodeLine{Change working directory to the recently cloned folder: }
+\DoxyCodeLine{}
 \DoxyCodeLine{```cd wol-\/ap}
 \end{DoxyCode}
 
 
-Install dependencies\+: 
+Install dependencies\+:
+
+
 \begin{DoxyCode}{0}
 \DoxyCodeLine{Run the API:}
+\DoxyCodeLine{}
 \DoxyCodeLine{```pipenv run python src/apimod/index.p}
 \end{DoxyCode}
-\hypertarget{md__home_rex_projects_wol-api_README_autotoc_md4}{}\doxysubsection{Usage\+:}\label{md__home_rex_projects_wol-api_README_autotoc_md4}
+
+
+See /docs/html/index.html for more info. 
